# RagaliQ

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  PROJECT_WORKFLOW.md  README.md  SECURITY.md  demo_single_eval.py  mkdocs.yml  pylock.toml  pyproject.toml
.claude/: CONSTANTS.md  README.md  WORKFLOW.md  commands.md  settings.json
.claude/agents/: lumina.md  prism.md  spectra.md
.claude/commands/: add-cli-command.md  add-docs-example.md  add-test-pattern.md  check.md  commit.md  complete-issue.md  fix.md  integrate-langchain.md  new-evaluator.md  new-judge.md  new-metric.md  optimize-prompts.md  pr.md  refactor-async.md  review-pr.md  setup-cicd.md  ship.md  start-work.md
.claude/scripts/: cleanup-legacy-labels.sh
.claude/skills/commit/: SKILL.md
.decisions/: ADR-000-judge-transport-protocol.md  ADR-006-faithfulness-evaluator.md  ADR-007-relevance-evaluator.md  ADR-008-hallucination-evaluator.md  ADR-011-evaluator-registry.md  README.md
.github/: LABELS.md  PULL_REQUEST_TEMPLATE.md  README.md  pr_metadata.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
Demo/: demo.json  report.html
demos/: keyword_rag.py
docs/: PROJECT_PLAN.md  TUTORIAL.md  index.md
docs/decisions/: task_6_analysis.md  task_7_analysis.md
examples/: basic_usage.py  context_recall_example.py
examples/ci_cd_example/: README.md  ragaliq-ci.yml
examples/pytest_example/: test_rag_quality.py
scripts/: verify_release.py
src/ragaliq/: __init__.py
src/ragaliq/cli/: main.py
src/ragaliq/core/: __init__.py  evaluator.py  runner.py  test_case.py
src/ragaliq/datasets/: __init__.py  generator.py  loader.py  schemas.py
src/ragaliq/evaluators/: __init__.py  _claims.py  context_precision.py  context_recall.py  faithfulness.py  hallucination.py  registry.py  relevance.py
src/ragaliq/integrations/: __init__.py  github_actions.py  pytest_plugin.py
src/ragaliq/judges/: __init__.py  base.py  base_judge.py  claude.py  models.py  trace.py  transport.py
src/ragaliq/judges/prompts/: __init__.py  extract_claims.yaml  faithfulness.yaml  generate_answer.yaml  generate_questions.yaml  loader.py  relevance.yaml  verify_claim.yaml
src/ragaliq/reports/: __init__.py  _utils.py  console.py  html.py  json_export.py
src/ragaliq/reports/templates/: report.html.j2
tests/: __init__.py  conftest.py
tests/fixtures/: sample_dataset.csv  sample_dataset.json  sample_dataset.yaml
tests/integration/: __init__.py  test_fewshot_examples.py  test_full_pipeline.py  test_pipeline.py  test_runner.py
tests/meta/: __init__.py  conftest.py  meta_metrics.py  test_judge_agreement.py  test_meta_metrics.py  test_mutation_discrimination.py
tests/meta/golden/: claim_verdicts.yaml  faithfulness_cases.yaml
tests/unit/: __init__.py  test_claims_pipeline.py  test_claude_judge.py  test_cli.py  test_console_reporter.py  test_context_precision_evaluator.py  test_context_recall_evaluator.py  test_datasets.py  test_empty_input_edge_cases.py  test_evaluator_registry.py  test_faithfulness_evaluator.py  test_generator.py  test_github_actions.py  test_hallucination_evaluator.py  test_html_reporter.py  test_json_reporter.py  test_judges.py  test_model_defaults.py  test_models.py  test_prompts.py  test_pytest_plugin.py  test_relevance_evaluator.py  test_runner.py  test_trace.py  test_transport_retry.py
