[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragaliq"
version = "0.1.0"
description = "RagaliQ - LLM Testing Framework for RAG Systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Darie Ro" }
]
keywords = [
    "llm",
    "rag",
    "testing",
    "evaluation",
    "ai",
    "quality-assurance",
    "pytest",
    "llm-testing",
    "rag-evaluation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.45.0",
    "openai>=1.60.0",
    "pydantic>=2.10",
    "typer>=0.15.0",
    "rich>=13.9",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[project.scripts]
ragaliq = "ragaliq.cli.main:app"

[project.entry-points.pytest11]
ragaliq = "ragaliq.integrations.pytest_plugin"

[project.urls]
Homepage = "https://github.com/yourusername/ragaliq"
Documentation = "https://github.com/yourusername/ragaliq#readme"
Repository = "https://github.com/yourusername/ragaliq"
Issues = "https://github.com/yourusername/ragaliq/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ragaliq"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["ragaliq"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=ragaliq --cov-report=term-missing"

[tool.coverage.run]
source = ["src/ragaliq"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
