[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragaliq"
version = "0.2.0"
description = "LLM & RAG evaluation testing framework — hallucination detection, faithfulness metrics, answer relevance scoring, and retrieval pipeline testing with pytest integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Darie Ro" }
]
keywords = [
    "llm-evaluation",
    "rag-testing",
    "hallucination-detection",
    "faithfulness-metrics",
    "answer-relevance",
    "context-precision",
    "retrieval-augmented-generation",
    "llm-as-judge",
    "ai-quality-assurance",
    "pytest-plugin",
    "rag-evaluation",
    "vector-search-audit",
    "generative-ai-testing",
    "embedding-similarity",
    "llm-testing-framework",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Pytest",
    "Typing :: Typed",
]

dependencies = [
    "anthropic>=0.109",
    "pydantic>=2.13",
    "typer>=0.26",
    "rich>=15",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tenacity>=9.1",
]

[project.optional-dependencies]
openai = ["openai>=2.41"]
docs = [
    "mkdocs-material>=9.7",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "mypy>=2.1",
    "pre-commit>=4.6",
    "types-PyYAML>=6.0",
]

[project.scripts]
ragaliq = "ragaliq.cli.main:app"

[project.entry-points.pytest11]
ragaliq = "ragaliq.integrations.pytest_plugin"

[project.urls]
Homepage = "https://github.com/dariero/RagaliQ"
Documentation = "https://dariero.github.io/RagaliQ/"
Repository = "https://github.com/dariero/RagaliQ"
Issues = "https://github.com/dariero/RagaliQ/issues"
Changelog = "https://github.com/dariero/RagaliQ/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ragaliq"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "mypy>=2.1",
    "pre-commit>=4.6",
    "types-PyYAML>=6.0",
    "build",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-fast = "pytest tests/ -v --no-cov"
test-unit = "pytest tests/unit/ -v"
test-integration = "pytest tests/integration/ -v"
lint = "ruff check src/ tests/"
format = ["ruff format src/ tests/", "ruff check --fix src/ tests/"]
typecheck = "mypy src/"
check = ["lint", "typecheck", "test"]
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files"
coverage-html = ["pytest tests/ --cov=ragaliq --cov-report=html", "open htmlcov/index.html"]
build = "python -m build"
clean = [
    "rm -rf build/ dist/ *.egg-info/ src/*.egg-info/",
    "rm -rf .pytest_cache/ .mypy_cache/ .ruff_cache/",
    "rm -rf .coverage htmlcov/",
    "find . -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null || true",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["ragaliq"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --cov=ragaliq --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["ragaliq"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
